<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etHoraSal"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/horassal2"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/tvTexto2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTexto1"
        tools:textColorHint="@color/black" />

    <EditText
        android:id="@+id/etValorAnos"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/valorAnos2"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/tvResultado"
        app:layout_constraintEnd_toStartOf="@+id/tvResultado"
        app:layout_constraintStart_toStartOf="@+id/tvResultado"
        app:layout_constraintTop_toBottomOf="@+id/tvTexto2"
        tools:textColorHint="@color/black" />

    <TextView
        android:id="@+id/tvTexto2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="9dp"
        android:text="@string/valorhoraAnosinstituicao"
        app:layout_constraintBottom_toTopOf="@+id/etValorAnos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHoraSal" />

    <TextView
        android:id="@+id/tvTexto1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="15dp"
        android:text="@string/horasSalario"
        app:layout_constraintBottom_toTopOf="@+id/etHoraSal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tvEscolha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="24dp"
        android:text="@string/texto1"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="26dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tvTexto1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEscolha">

        <RadioButton
            android:id="@+id/rbHorista"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/horista"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rbTitular"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/titular"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="203dp"
        android:text="@string/btncalcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvResultado"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/tvResultado"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValorAnos" />

</androidx.constraintlayout.widget.ConstraintLayout>